fixed the mismatched data
